panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__struct__test_address_of_member_of_static_struct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/struct/test_address_of_member_of_static_struct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_address_of_member_of_static_struct.c"
   (struct T~0
      (member x @0 `int`)
      (member y @4 `int`))
   (definition external static_struct~1 `struct T~0 complete`
      (braced
         (subobject +0 (42 `int`))
         (subobject +4 (27 `int`))))
   (function-definition external
      main~2 `fn() -> int`
      (compound-statement
         (definition p~4 `ptr<int>`
            (addressof `ptr<int>`
               (member `int` y +4
                  (static_struct~1 `struct T~0 complete`))))
         (return (deref `int` (p~4 `ptr<int>`))))))

----- stderr -----
