panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__struct__test_assign_to_member_nested_via_pointer.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/struct/test_assign_to_member_nested_via_pointer.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_assign_to_member_nested_via_pointer.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (struct T~2
            (member x @0 `int`))
         (definition t~3 `struct T~2 complete`
            (braced
               (subobject +0 (42 `int`))))
         (expression
            (assign `int`
               (member `int` x +0
                  (t~3 `struct T~2 complete`))
               (27 `int`)))
         (struct U~4
            (member x @0 `int`)
            (member t @4 `struct T~2 complete`))
         (definition a~5 `struct U~4 complete`
            (braced
               (subobject +0 (123 `int`))
               (subobject +4 (t~3 `struct T~2 complete`))))
         (definition p~6 `ptr<struct U~4 complete>`
            (addressof `ptr<struct U~4 complete>`
               (a~5 `struct U~4 complete`)))
         (expression
            (assign `int`
               (member `int` x +0
                  (member `struct T~2 complete` t +4
                     (deref `struct U~4 complete` (p~6 `ptr<struct U~4 complete>`))))
               (5 `int`)))
         (return
            (member `int` x +0
               (member `struct T~2 complete` t +4
                  (a~5 `struct U~4 complete`)))))))

----- stderr -----
