panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__struct__test_assign_to_member_nested_via_pointer_static_3.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/struct/test_assign_to_member_nested_via_pointer_static_3.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_assign_to_member_nested_via_pointer_static_3.c"
   (struct T~0
      (member x @0 `int`))
   (definition external t~1 `struct T~0 complete`
      (braced
         (subobject +0 (42 `int`))))
   (struct U~2
      (member x @0 `int`)
      (member t @4 `struct T~0 complete`))
   (definition external a~3 `struct U~2 complete`
      (braced
         (subobject +0 (123 `int`))
         (subobject +4 (42 `int`))))
   (function-definition external
      main~4 `fn() -> int`
      (compound-statement
         (expression
            (assign `int`
               (member `int` x +0
                  (t~1 `struct T~0 complete`))
               (27 `int`)))
         (struct T~0
            (member x @0 `int`))
         (definition p~6 `ptr<struct T~0 complete>`
            (addressof `ptr<struct T~0 complete>`
               (member `struct T~0 complete` t +4
                  (a~3 `struct U~2 complete`))))
         (expression
            (assign `int`
               (member `int` x +0
                  (deref `struct T~0 complete` (p~6 `ptr<struct T~0 complete>`)))
               (add `int`
                  (member `int` x +0
                     (deref `struct T~0 complete` (p~6 `ptr<struct T~0 complete>`)))
                  (1 `int`))))
         (return
            (member `int` x +0
               (member `struct T~0 complete` t +4
                  (a~3 `struct U~2 complete`)))))))

----- stderr -----
